took home out of views folder

--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
     <title>foodo | Home</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/custom.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -67,13 +67,13 @@
       <div class="row">
         <center>
         <div class="col-md-4">
-          <h2><a href="shop.html"><i class="fa fa-shopping-cart"></i>  Shop</a></h2>
+          <h2><a href="views/shop.html"><i class="fa fa-shopping-cart"></i>  Shop</a></h2>
         </div>
         <div class="col-md-4">
-          <h2><a href="track.html"><i class="fa fa-line-chart"></i>  Track</a></h2>
+          <h2><a href="views/track.html"><i class="fa fa-line-chart"></i>  Track</a></h2>
        </div>
         <div class="col-md-4">
-          <h2><a href="give.html"><span class="glyphicon glyphicon-grain"></span>  Give</a></h2>
+          <h2><a href="views/give.html"><span class="glyphicon glyphicon-grain"></span>  Give</a></h2>
         </div>
       </center>
       </div>
