re-fix home links

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h3><a href="/" id="navlink">foodo</a></h3>
+          <h3><a href="/foodo.io" id="navlink">foodo</a></h3>
         </div>
               
         <div id="navbar" class="navbar-collapse collapse">
