made changes to prototype
fixed some descriptions/home nav buttons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h3><a href="/foodo.io" id="navlink">foodo</a></h3>
+          
+            <ul>
+                <li><a href="/foodo.io" id="navlink">foodo</a></li>
+           <li> <a href="views/shop.html" id="navlink"><i class="fa fa-shopping-cart"></i>  Shop</a></li>
+            <li><a href="views/track.html" id="navlink"><i class="fa fa-line-chart"></i>  Track</a></li>
+           <li><a href="views/give.html" id="navlink"><span class="glyphicon glyphicon-grain"></span>  Give</a></li> 
+                </ul>
+
         </div>
               
         <div id="navbar" class="navbar-collapse collapse">
@@ -67,13 +74,13 @@
       <div class="row">
         <center>
         <div class="col-md-4">
-          <h2><a href="views/shop.html"><i class="fa fa-shopping-cart"></i>  Shop</a></h2>
+          <a href="views/shop.html"><div class="btn btn-success"><h2><i class="fa fa-shopping-cart"></i>  Shop</h2></div></a>
         </div>
         <div class="col-md-4">
-          <h2><a href="views/track.html"><i class="fa fa-line-chart"></i>  Track</a></h2>
-       </div>
+          <a href="views/track.html"><div class="btn btn-success"><h2><i class="fa fa-line-chart"></i>  Track</h2></div></a>  
+        </div>
         <div class="col-md-4">
-          <h2><a href="views/give.html"><span class="glyphicon glyphicon-grain"></span>  Give</a></h2>
+          <a href="views/give.html"><div class="btn btn-success"><h2><span class="glyphicon glyphicon-grain"></span>  Give</h2></div></a>
         </div>
       </center>
       </div>
