give page button
added padding to button on home page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a href="views/track.html"><div class="btn btn-success"><h2><i class="fa fa-line-chart"></i>  Track</h2></div></a>  
         </div>
         <div class="col-md-4">
-          <a href="views/give.html"><div class="btn btn-success"><h2><span class="glyphicon glyphicon-grain"></span>  Give</h2></div></a>
+          <a href="views/give.html"><div class="btn btn-success" id="give-btn"><h2><span class="glyphicon glyphicon-grain"></span>  Give</h2></div></a>
         </div>
       </center>
       </div>
